@@ -828,6 +828,33 @@ case $IPALIAS in
 esac
 
 #----------------------------------------------------------------------
+
+AC_MSG_CHECKING(whether onchange script is enabled)
+AC_ARG_ENABLE(onchange-script,
+        [  --enable-onchange-script   Enable onchange script. See README.onchange for more info.],
+        ENABLE_ONCHANGE_SCRIPT=$enableval,
+                [
+                        ENABLE_ONCHANGE_SCRIPT=0
+                ]
+)
+
+case $ENABLE_ONCHANGE_SCRIPT in
+  0*|n*|N*)
+      AC_MSG_RESULT(no)
+      ;;
+  *)
+      AC_MSG_RESULT(yes)
+      ENABLE_ONCHANGE_SCRIPT=1
+      AC_DEFINE_UNQUOTED(ONCHANGE_SCRIPT,$ENABLE_ONCHANGE_SCRIPT,"")
+      ;;
+esac
+
+AC_DEFINE_UNQUOTED(ONCHANGE_SCRIPT,$ENABLE_ONCHANGE_SCRIPT,"")
+
+#----------------------------------------------------------------------
+
+
+#----------------------------------------------------------------------
 #  -- domain quotas disabled until they actually work again --
 #AC_MSG_CHECKING(whether domainquotas is enabled)
 #AC_ARG_ENABLE(domainquotas,
